final touches to the project

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 Florence Kamau <kamaufnjeri2019@gmail.com>
 Joel Muhoho    <joelkmuhoho@gmail.com>
+Olatunbosun oladayo Micheal <tubosund@gmail.com>
+Innocnet Akpoyibo <innocentefeakpoyibo@gmail.com>
